deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-development
  namespace: dev
spec:
  selector:
    matchLabels:
      app: keycloak-development
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: keycloak-development
    spec:
      containers:
      - name: keycloak-development
        args: ["start --db postgres --db-url-host postgres --db-username appuser --db-password strongpasswordapp "]
        image: quay.io/keycloak/keycloak:22.0
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 8443
