keycloakdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-production
  namespace: user-service
spec:
  selector:
    matchLabels:
      app: keycloak-production
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: keycloak-production
    spec:
      containers:
        - name: keycloak-production
          image: quay.io/keycloak/keycloak:26.4
          args: ["start"]
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
